src/objects/MidTermUpgradeProduct__c.object
<CustomObject>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>ZProduct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpgradeProductName__c</fullName>
        <formula>UpgradeProduct__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpgradeProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgrade Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Mid Term Upgrade Products (Upgrade Product)</relationshipLabel>
        <relationshipName>UpgradeProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Mid Term Upgrade Products</relationshipLabel>
        <relationshipName>MidTermUpgradeProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mid Term Upgrade Product</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Mid Term Upgrade Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mid Term Upgrade Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_From_To_Validation</fullName>
        <active>true</active>
        <description>Temporary validation to validate combination of upgrades.</description>
        <errorConditionFormula>NOT(
OR(
 AND(ZProduct__r.Name==&apos;2 Day Print&apos;, UpgradeProduct__r.Name==&apos;2 Day Complete&apos;),
 AND(ZProduct__r.Name==&apos;5 Day Print&apos;, UpgradeProduct__r.Name==&apos;5 Day Complete&apos;),
 AND(ZProduct__r.Name==&apos;6 Day Print&apos;, UpgradeProduct__r.Name==&apos;6 Day Complete&apos;),
 AND(ZProduct__r.Name==&apos;7 Day Print&apos;, UpgradeProduct__r.Name==&apos;7 Day Complete&apos;)
)
)</errorConditionFormula>
        <errorMessage>You can only enable print products without digital edition to be upgraded to their respective product with digital option.</errorMessage>
    </validationRules>
</CustomObject>